# extrator-xml-fiscal

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
extrator_xml_fiscal/: __init__.py  extrator_base.py  extrator_cancelamento.py  extrator_carta_correcao.py  extrator_evento_base.py  extrator_nfe.py  utils.py
